--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@aws-sdk/client-s3": "^3.864.0",
     "@aws-sdk/s3-request-presigner": "^3.864.0",
     "aws-sdk": "^2.1692.0",
+    "jszip": "^3.10.1",
     "next": "^15.4.6",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
